--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -20,7 +20,7 @@ h2 {
   grid-template-rows: 1fr 1fr 1fr;
   width: 350px;
   height: 350px;
-  margin: 0 auto;
+  margin: 0 auto 40px;
 }
 .cell {
   padding: 15px;
@@ -31,8 +31,19 @@ h2 {
 }
 .cell:nth-child(3n+2),
 .cell:nth-child(3n+1){
-  border-right: 3px solid black;
+  border-right: 6px solid black;
 }
 .cell:nth-child(-n+6){
-  border-bottom: 3px solid black;
+  border-bottom: 6px solid black;
+}
+#messages {
+  margin: 0 auto 40px;
+  text-align: center;
+}
+.btn-container {
+  text-align: center;
+  margin: 0 auto;
+}
+.hide {
+  display: none;
 }
